crates/astria-core/src/primitive/v1/snapshots/astria_core__primitive__v1__tests__base64_of_raw_rollup_id_should_be_url_safe.snap
---
source: crates/astria-core/src/primitive/v1/mod.rs
assertion_line: 930
expression: "&rollup_id.to_raw()"
---
{
  "inner": "_v7-_v7-_v7-_v7-_v7-_v7-_v7-_v7-_v7-_v7-_v4="
}
