crates/astria-core/src/primitive/v1/snapshots/astria_core__primitive__v1__tests__compat_bech32_non_m_address.snap
---
source: crates/astria-core/src/primitive/v1/mod.rs
expression: "&compat_address"
---
astriacompat19g4z52329g4z52329g4z52329g4z52322jspvr
