crates/astria-core/src/primitive/v1/snapshots/astria_core__primitive__v1__tests__main_bech32m_address.snap
---
source: crates/astria-core/src/primitive/v1/mod.rs
expression: "&main_address.to_raw()"
---
{
  "bech32m": "astria19g4z52329g4z52329g4z52329g4z5232ayenag"
}
