crates/astria-core/src/primitive/v1/snapshots/astria_core__primitive__v1__tests__snapshots-2.snap
---
source: crates/astria-core/src/primitive/v1/mod.rs
expression: "&bech32_address"
---
astriacompat19g4z52329g4z52329g4z52329g4z52322jspvr
